# UGP

./: .gitignore  README.md  pyproject.toml  test_clrnet.py  test_video2_analysis.json  test_video_analysis.json
CLRNet/: requirements.txt
CLRNet/clrnet/: __init__.py
CLRNet/clrnet/models/backbones/: dla34.py
CLRNet/clrnet/models/nets/: detector.py
CLRNet/clrnet/utils/: config.py  net_utils.py
src/drive_text/: __init__.py  analysis.py  cli.py  collision.py  config.py  detection.py  lane.py  lane_old.py  schema.py  video.py  vlm.py
src/drive_text.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_detection.py
